# uniphant

./: .gitignore  1.0--1.1.sql  1.1--1.2.sql  1.2--1.3.sql  1.3--1.4-footer.sql  1.3--1.4-header.sql  1.4--1.5-header.sql  1.4--1.5.sql  Makefile  README.md  auto-update.sh  complain_header.sql  create_schema_grant.sql  footer.sql  grant.sql  header.sql  install.sh  nginx.conf  postgrest-reload-schema.sh  postgrest.conf  postgrest.service  role-based-access-control.sql  row-level-security.sql  self-signed.conf  ubuntu-install-test.sh  ubuntu-install.sh  uniphant--1.0--1.1.sql  uniphant--1.0.sql  uniphant--1.1--1.2.sql  uniphant--1.1.sql  uniphant--1.2--1.3.sql  uniphant--1.2.sql  uniphant--1.3--1.4.sql  uniphant--1.3.sql  uniphant--1.4--1.5.sql  uniphant--1.4.sql  uniphant--1.5--1.6.sql  uniphant--1.5.sql  uniphant--1.6.sql  uniphant.control  (+1 more)
EVENT_TRIGGER/: ddl_postgrest.sql
FUNCTIONS/: auth.sql  auto_add_new_resources.sql  check_resource_access.sql  delete_process.sql  disconnect.sql  effective_domain.sql  ensure_worker_exists_and_get_ids.sql  get_existing_process_info.sql  get_or_create_worker_id.sql  get_process.sql  get_worker_ids.sql  get_worker_process_id.sql  has_role.sql  hash_extension.sql  issue_access_token.sql  keepalive.sql  keepalive_process.sql  kill_worker_next.sql  notify_ddl_postgrest.sql  ping_worker_next.sql  register_host.sql  register_process.sql  register_resource.sql  register_worker.sql  remote_ip.sql  request_process_termination.sql  scale_down.sql  scale_up.sql  set_openapi_swagger.sql  set_user_id.sql  start_worker_next.sql  terminate_process.sql  user_id.sql
TABLES/: access_tokens.sql  credentials.sql  hosts.sql  openapi_swagger.sql  permissions.sql  processes.sql  resources.sql  role_memberships.sql  roles.sql  sections.sql  settings.sql  tokens.sql  users.sql  worker_types.sql  workers.sql
rust/: Cargo.toml
rust/example_workers/: .gitignore  run.sh
rust/example_workers/workers/opentdb/: Cargo.toml
rust/src/: database.rs  init_worker.rs  lib.rs  parse_arguments.rs  read_config_files.rs  setup_logging.rs  utils.rs  worker.rs  worker_context.rs
(+78 files in other folders)
