[package]
name = "uniphant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.1", features = ["serde", "v4"] }
hostname = "0.3.1"
dirs = "5.0.0"
simplelog = "0.12.1"
postgres = { version = "0.19.5", features = ["with-uuid-1"] }
daemonize = "0.5.0"
log = "0.4.17"
