[package]
name = "uniphant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3", features = ["serde", "v4"] }
hostname = "0.3"
dirs = "5.0"
simplelog = "0.12"
postgres = { version = "0.19", features = ["with-uuid-1"] }
daemonize = "0.5"
log = "0.4"
postgres_query = "0.3"
