[package]
name = "opentdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "get_trivia_question"
path = "src/bin/get_trivia_question.rs"

[dependencies]
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
serde_json = "1.0.96"
postgres = { version = "0.19.5", features = ["with-uuid-1", "with-serde_json-1"] }
log = "0.4.17"
uniphant = { path = "/Users/joel/src/uniphant/rust" }
